Delete old final processors
Incremental processing is now the only standard in the codebase.
Both the iteration number and the time where the best fitness is
achieved is logged. Also, total iteration count is logged for each
algorithm, proving useful for time-bound experiment runs.